# BESSER-MCP-Server

./: .gitignore  MCP-CLIENT-SETUP.md  QUICK-START.md  README.md  claude-desktop-config-windows.json  cursor-mcp-config-windows.json  debug_sql.py  debug_sql_detailed.py  install-mcp-config.ps1  mcp-config-examples.json  mcp-config.json  pyproject.toml
output/: tables_sqlite.sql
src/besser_mcp_server/: __init__.py  creation.py  delete.py  generators.py  info.py  server.py  utils.py
tests/: test_add_class.py  test_server_startup.py
